--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
       <li><a href="https://twitter.com/TDG_official"><img src="assets/images/btn_tw.png" height="61" width="61" alt="twitter"></a></li>
     </ul>
     <ul class="footer_manu">
-      <li><a href="#top">ホーム</a></li>
-      <li><a href="http://www.tdg.ac.jp/ipn/form/request2016/">資料請求</a></li>
-      <li><a href="http://www.tdg.ac.jp/ipn/whats/">TDGとは</a></li>
-      <li><a href="http://www.tdg.ac.jp/ipn/form/inspection/">学校見学</a></li>
+      <li><a href="http://www.tdg.ac.jp/">ホーム</a></li>
+      <li><a href="http://www.tdg.ac.jp/form/request2017/">資料請求</a></li>
+      <li><a href="http://www.tdg.ac.jp/?gclid=CjwKEAjw1Iq6BRDY_tK-9OjdmBESJABlzoY72zaYNqHKj11L9-0WHuqGrgG4m9CX83dO_7PNBSasTRoCoBnw_wcB">TDGとは</a></li>
+      <li><a href="http://www.tdg.ac.jp/form/inspection/">学校見学</a></li>
       <li><a href="http://www.tdg.ac.jp/facility/">施設/設備</a></li>
       <li><a href="http://www.tdg.ac.jp/admission-flow/">出願について</a></li>
-      <li><a href="http://www.tdg.ac.jp/ipn/form/question/">お問い合わせ</a></li>
-      <li><a href="http://www.tdg.ac.jp/opencampus09/">オープンキャンパス</a></li>
+      <li><a href="http://www.tdg.ac.jp/access/">お問い合わせ</a></li>
+      <li><a href="http://www.tdg.ac.jp/opencampus0506/">オープンキャンパス</a></li>
     </ul>
     <h4>学校法人 / 専門学校<br><span>東京デザイナー学院</span></h4>
     <address>お茶の水本校舎<br>〒101-0062　東京都千代田区神田駿河台2-11<br>Freedial : 0120-62-6006 / 03-3294-2831</address>
