フッター募集要項を修正

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <li><a href="http://www.tdg.ac.jp/ipn/whats/">TDGとは</a></li>
       <li><a href="http://www.tdg.ac.jp/ipn/form/inspection/">学校見学</a></li>
       <li><a href="http://www.tdg.ac.jp/facility/">施設/設備</a></li>
-      <li><a href="http://www.tdg.ac.jp/admission-flow/">出願について</a></li>
+ぼ      <li><a href="http://www.tdg.ac.jp/admission-flow/">出願・募集要項</a></li>
       <li><a href="http://www.tdg.ac.jp/ipn/form/question/">お問い合わせ</a></li>
       <li><a href="http://www.tdg.ac.jp/opencampus09/">オープンキャンパス</a></li>
     </ul>
