[fix]メニューのテキストを修正３

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <li><a href="#">学校の特徴　東京デザイナー学院とは？</a></li>
     <li><a href="#">可能性広げる　12学科 51専攻紹介</a></li>
     <li><a href="#">募集要項　出願について</a></li>
-    <li><a href="#">学校長メッセージ</a></li>
+    <li><a href="#">学校長からのメッセージ</a></li>
     <li><a href="#">最新の施設　12学科 51専攻紹介</a></li>
     <li><a href="#">情報満載　出願について</a></li>
   </ul>
